<resources>
    <string name="app_name">MisPedidosPendientes</string>
    <string name="app_action_bar_pedidos">Pedidos Pendientes</string>
    <string name="btnTiendas">Tiendas</string>
    <string name="btnNuevoPedido">Nuevo Pedido</string>
    <string name="placeholder">Placeholder...</string>
    <string name="app_action_bar_tiendas">Tiendas</string>
    <string name="btnNuevaTienda">Nueva Tienda</string>
    <string name="btnVolver">Volver</string>
    <string name="nuevaTienda">Nueva Tienda</string>
    <string name="nombreNuevaTienda">Nombre:</string>
    <string name="nombreNuevaTiendaPrompt">Introduce el nombre de la tienda...</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="nombreNoValido">Nombre no válido. Intentar de nuevo.</string>
    <string name="altaCorrecta">Alta correcta</string>
    <string name="error">Ha ocurrido un error.</string>
    <string name="tiendaYaExiste">Esta tienda ya existe.</string>
    <string name="nuevoPedido">Nuevo Pedido</string>
    <string name="tienda">Tienda:</string>
    <string name="tiendaSpinnerPrompt">Selecciona la tienda...</string>
    <string name="fechaPedido">Fecha del pedido:</string>
    <string name="fechaEntrega">Fecha estimada de entrega:</string>
    <string name="fechaPrompt">17/03/2025</string>
    <string name="descripcion">Descripción:</string>
    <string name="descripcionPrompt">Introduce la descripción del producto...</string>
    <string name="importe">Importe:</string>
    <string name="importePrompt">22.14</string>
    <string name="spinnerPrompt">Selecciona la tienda...</string>
    <string name="rellenaTodos">Hay campos vacíos, completa todos los campos.</string>
    <string name="fechaPedidoIncorrecta">Fecha de pedido es incorrecta.</string>
    <string name="fechaEntregaIncorrecta">Fecha de entrega es incorrecta.</string>
    <string name="fechasIncorrectas">La fecha del pedido tiene que ser antes de la fecha de la entrega.</string>
    <string name="introduceNuevoNombreTienda">Nuevo nombre de la tienda...</string>
    <string name="edicionTienda">Modificación Tienda: </string>
    <string name="modificacionCorrecta">Modificación correcta</string>
    <string name="recibido">Recibido?</string>
    <string name="edicionPedido">Modificación Pedido: nº</string>
    <string name="borradoTienda">Baja Tienda:</string>
    <string name="borradoPedido">Baja Pedido: nº</string>
    <string name="mensajeConfirmacionTiendaBorrado">¿Estás seguro de que quieres dar de baja la tienda: </string>
    <string name="mensajeConfirmacionPedidoBorrado">¿Estás seguro de que quieres dar de baja el pedido: nrº</string>
    <string name="borradoCorrecto">Baja correcta</string>
    <string name="esFK">Baja incorrecta\nEsta tienda tiene pedidos pendientes.</string>
    <string name="importeIncorrecto">Importe incorrecto</string>
</resources>