<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="200dp"
    android:padding="10dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".tiendas.AltaTienda">

    <EditText
        android:id="@+id/editNombreTienda"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/nombreNuevaTiendaPrompt"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreNuevaTienda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNombreTienda"
        app:layout_constraintTop_toBottomOf="@+id/editNombreTienda" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editNombreTienda"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAceptar"
        app:layout_constraintTop_toBottomOf="@+id/editNombreTienda" />

</androidx.constraintlayout.widget.ConstraintLayout>