<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="440dp"
    android:minHeight="580dp"
    android:padding="10dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".pedidos.ModificarPedido">

    <TextView
        android:id="@+id/textView1E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/tienda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAceptar3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editImporteE"
        app:layout_constraintTop_toBottomOf="@+id/chip"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/editImporteE"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/importePrompt"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5E"
        app:layout_constraintTop_toBottomOf="@+id/textView5E"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/fechaEntrega"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editFechaPedidoE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFechaPedidoE"
        app:layout_constraintTop_toBottomOf="@+id/editFechaPedidoE"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/descripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editFechaEntregaE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFechaEntregaE"
        app:layout_constraintTop_toBottomOf="@+id/editFechaEntregaE"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editFechaEntregaE"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/fechaPrompt"
        android:inputType="date"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3E"
        app:layout_constraintTop_toBottomOf="@+id/textView3E"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCancelar3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editImporteE"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/editDescripcionE"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/descripcionPrompt"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4E"
        app:layout_constraintTop_toBottomOf="@+id/textView4E"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editFechaPedidoE"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/fechaPrompt"
        android:inputType="date"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2E"
        app:layout_constraintTop_toBottomOf="@+id/textView2E"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/importe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editDescripcionE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDescripcionE"
        app:layout_constraintTop_toBottomOf="@+id/editDescripcionE"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerE"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView1E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1E"
        app:layout_constraintTop_toBottomOf="@+id/textView1E"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/fechaPedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerE"
        app:layout_constraintTop_toBottomOf="@+id/spinnerE"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:checked="false"
        android:text="@string/recibido"
        app:checkedIcon="@drawable/baseline_check_circle_24"
        app:checkedIconEnabled="true"
        app:chipBackgroundColor="@color/peach"
        app:chipIcon="@drawable/baseline_check_circle_outline_24"
        app:chipIconVisible="true"
        app:chipStrokeColor="@color/olivine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editImporteE"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/editImporteE"
        app:layout_constraintTop_toBottomOf="@+id/editImporteE"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>