<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxHeight="150dp"
    android:minHeight="150dp"
    android:padding="10dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".pedidos.BajaPedido">

    <TextView
        android:id="@+id/textViewConfirmacion2"
        android:layout_width="294dp"
        android:layout_height="54dp"
        android:text="@string/mensajeConfirmacionPedidoBorrado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/btnAceptar5"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewConfirmacion2"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfirmacion2"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/btnCancelar5"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewConfirmacion2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAceptar5"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfirmacion2"
        app:layout_constraintVertical_bias="0.051" />


</androidx.constraintlayout.widget.ConstraintLayout>